--- a/index.html
+++ b/index.html
@@ -23,38 +23,60 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                         <li class="nav-item dropdown destaquedropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                              Animes e Mangás
+                              Mangás
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">O Que São</a>
+                              <a class="dropdown-item" href="#">Como Surgiram</a>
+                              <a class="dropdown-item" href="#">Dias Atuais</a>
+                              <a class="dropdown-item" href="#">Características</a>
+                              <a class="dropdown-item" href="#">Como Julgar</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Something else here</a>
+                              <a class="dropdown-item" href="#">Recomendações</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown destaquedropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                                Ligth Novels
+                                Animes
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
+                                <a class="dropdown-item" href="#">O Que São</a>
+                                <a class="dropdown-item" href="#">Como Surgiram</a>
+                                <a class="dropdown-item" href="#">Dias Atuais</a>
+                                <a class="dropdown-item" href="#">Características</a>
+                                <a class="dropdown-item" href="#">Como Julgar</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Recomendações</a>
+                              </div>
+                        </li>
+                        <li class="nav-item dropdown destaquedropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                              Light Novels
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">O Que São</a>
+                                <a class="dropdown-item" href="#">Como Surgiram</a>
+                                <a class="dropdown-item" href="#">Dias Atuais</a>
+                                <a class="dropdown-item" href="#">Características</a>
+                                <a class="dropdown-item" href="#">Como Julgar</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Recomendações</a>
+                              </div>
                         </li>
                         <li class="nav-item dropdown destaquedropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                               Gêneros Orientais
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Something else here</a>
+                              <a class="dropdown-item" href="#">Quais São</a>
+                              <a class="dropdown-item" href="#">Shounen</a>
+                              <a class="dropdown-item" href="#">Shoujo</a>
+                              <a class="dropdown-item" href="#">Isekai</a>
+                              <a class="dropdown-item" href="#">Slice Of Life</a>
+                              <a class="dropdown-item" href="#">Mecha</a>
                             </div>
                         </li>
                         <a class="nav-link" href="#">Contato</a>
@@ -90,8 +112,8 @@
                     <div class="carousel-item">
                         <img src="img/caroussel/carroussel3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Curiosidades</h5>
-                            <p>Aprenda também algumas curiosidades sobre as obras orientais.</p>
+                            <h5>Gêneros</h5>
+                            <p>Aprenda também do que se tratam os gêneros que são específicos para obras orientais.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -104,8 +126,8 @@
                     <div class="carousel-item">
                         <img src="img/caroussel/carroussel5.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Gêneros</h5>
-                            <p>Aprenda também do que se tratam os gêneros que são específicos para obras orientais.</p>
+                            <h5>Curiosidades</h5>
+                            <p>Aprenda também algumas curiosidades sobre as obras orientais.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -126,6 +148,81 @@
                 </button>
               </div>
         </div>
+        <main id="home">
+            <div class="introducao">
+                <p>Texto Introdutório</p>
+            </div>
+            <div>
+                <section class="introducaomanga">
+                    <div class="container espacoentreasintroducoes">
+                        <div class="row align-items-center">
+                            <div class="col-md-3 col-lg-3 d-none d-md-block">
+                                <div class="p-4">
+                                    <img class="img-fluid" style="height: 220px; width: 300px;"  src="img/introducaomanga.png" alt="Imagem de Buda, mangá Shumatsu no Walkure">
+                                </div>
+                            </div>
+                            <div class="col-md-9 col-lg-9">
+                                <div class="p-4">
+                                    <h2 class="display-5">Mangás</h2> <br>
+                                    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea, eum, amet aliquam laboriosam laudantium eaque odio nobis minima quos earum natus dicta deleniti tenetur velit officiis voluptatem praesentium pariatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident voluptate veniam assumenda unde perspiciatis iure dolor necessitatibus at quisquam dignissimos fugit laudantium, ratione facilis itaque eos asperiores expedita inventore dicta. <a href="#">Saiba tudo sobre mangás aqui</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="introducaoanime">
+                    <div class="container espacoentreasintroducoes">
+                        <div class="row align-items-center">
+                            <div class="col-sm-12 col-md-9 col-lg-9">
+                                <div class="p-4">
+                                    <h2 class="display-5">Animes</h2> <br>
+                                    <p style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint vitae libero repudiandae minima harum nesciunt, voluptates, earum fugiat sapiente nostrum quaerat cum porro. Modi necessitatibus, est doloribus et libero excepturi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum vitae amet quia dicta nobis. Pariatur, maiores ab error aut possimus temporibus incidunt. Nihil quidem culpa nobis neque. Tempore, consequatur ea. <a href="#">Saiba tudo sobre animes aqui</a></p>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-lg-3 d-none d-md-block">
+                                <div class="p-4">
+                                    <img class="img-fluid" style="height: 220px; width: 300px;" src="img/introducaoanime.png" alt="Imagem de misturas de animes">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="introducaonovel">
+                    <div class="container espacoentreasintroducoes">
+                        <div class="row align-items-center">
+                            <div class="col-md-3 col-lg-3 d-none d-md-block">
+                                <div class="p-4">
+                                    <img class="img-fluid" style="height: 220px; width: 300px;" src="img/introducaonovel.jpg" alt="Imagem de uma Light Novel">
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-9 col-lg-9">
+                                <div class="p-4">
+                                    <h2 class="display-5">Light Novels</h2> <br>
+                                    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolorem rem earum neque quia blanditiis voluptates voluptas dicta adipisci nulla fugit dolor et voluptatem hic necessitatibus accusantium ipsa, id quae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae iure odit, voluptate velit numquam dicta, asperiores enim repellendus eos et illo qui nemo facilis possimus suscipit magni, laboriosam officia assumenda. <a href="#">Saiba tudo sobre light novels aqui</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="introducaogenero">
+                    <div class="container espacoentreasintroducoes">
+                        <div class="row align-items-center">
+                            <div class="col-sm-12 col-md-9 col-lg-9">
+                                <div class="p-4">
+                                    <h2 class="display-5">Gêneros Orientais</h2> <br>
+                                    <p style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae quibusdam ea eius enim recusandae mollitia, excepturi placeat est quasi quas earum facere ratione praesentium ducimus asperiores, consequuntur, autem sequi voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus corrupti inventore libero sed architecto, iste, sunt cumque voluptates voluptate dignissimos deserunt aliquid magnam, enim nulla. Ad libero doloremque nulla! <a href="#">Saiba tudo sobre gêneros orientais aqui</a></p>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-lg-3 d-none d-md-block">
+                                <div class="p-4">
+                                    <img class="img-fluid" style="height: 220px; width: 300px;" src="img/introducaogeneros.jpg" alt="Animes de Gêneros Diferentes">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
         
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
