Site MangAnime versão 3

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                   <span class="sr-only">Next</span>
                 </button>
               </div>
-        </div>
+        </div> <br>
         <main id="home">
             <div class="introducao">
-                <p>Texto Introdutório</p>
+                <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit officia, explicabo cum quod consectetur porro ratione consequatur deserunt aliquid minima similique nobis ipsa id recusandae ut odio fugit voluptate! Pariatur! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas non illum, alias molestiae architecto at ea beatae maxime explicabo ab eos nemo accusamus, quisquam laudantium maiores fugit, placeat adipisci. Reiciendis.</p>
             </div>
             <div>
                 <section class="introducaomanga">
