--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <title>MangAnime</title>
@@ -71,7 +73,7 @@
                               Gêneros Orientais
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">Quais São</a>
+                              <a class="dropdown-item" href="#">O Que São</a>
                               <a class="dropdown-item" href="#">Shounen</a>
                               <a class="dropdown-item" href="#">Shoujo</a>
                               <a class="dropdown-item" href="#">Isekai</a>
@@ -222,7 +224,27 @@
                     </div>
                 </section>
             </div>
-        </main>
+        </main> <br>
+        <footer>
+            <ul class="itensfooter">
+                <li>
+                    <i class="fas fa-phone-square iconefooter"></i> <br>
+                    (11) 99513-5732
+                </li>
+                <li>
+                    <i class="far fa-envelope iconefooter"></i> <br>
+                    murilo.etec.2020.ti@gmail.com
+                </li>
+                <li>
+                    <i class="fab fa-github iconefooter"></i> <br>
+                    murilosouzaalmeida
+                </li>
+            </ul>
+            <p class="textofooter">
+                <span>Site desenvolvido por Murilo Souza Almeida </span>
+                &copy; 2021
+            </p>
+        </footer>
         
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
